[package]
name = "wfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
image = { version = "0.24.6", features = ["png"], default-features = false }
macroquad = "0.4.2"
nanoserde = "0.1.33"
